--- a/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/App_Resources/Android/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="__PACKAGE__"
 	android:versionCode="10000"
-	android:versionName="1.0">
+	android:versionName="1.11.0"
+	xmlns:tools="http://schemas.android.com/tools">
+<!-- package="org.nativescript.CleanCamiguinQR" -->
+<!-- package="__PACKAGE__" -->
 
 	<supports-screens
 		android:smallScreens="true"
@@ -19,7 +22,7 @@
 		android:name="com.tns.NativeScriptApplication"
 		android:usesCleartextTraffic="true"
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@drawable/applogo"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme"
 		android:hardwareAccelerated="true">
