--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "nativescript-audio": "^6.2.6",
     "nativescript-barcodescanner": "^4.1.2",
     "nativescript-feedback": "^2.0.0",
     "nativescript-vue": "~2.9.0",
